redesigned and completed

--- a/fem_challenges/single-price-grid-component-master/index.html
+++ b/fem_challenges/single-price-grid-component-master/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
+  <!--
   <div class="chrome-tools-layer">
+  -->
+  
     <div class="page-container">
       <div class="content-container">
 
@@ -23,21 +26,41 @@
             who are serious about honing their skills.</div>
         </div>
 
-        <div class="sign-up-container">
-          <div class="package-title">Montly Subscription</div>
-          <div class="package-price">
-            <div class="price-amount">$29</div>
-            <div class="price-duration">per month</div>
+        <div class="secondary-containers">
+
+          <div class="sign-up-container">
+            <div class="sign-up-title">Monthly Subscription</div>
+            <div class="price-container">
+              <div class="price-amount">$29</div>
+              <div class="price-duration">per month</div>
+            </div>
+            <div class="sign-up-tagline">Full access for less than $1
+              a day
+            </div>
+            <button class="btn-sign-up">Sign Up</button>
           </div>
-          <div class="package-tagline">Full access for less than $1 a day</div>
-          <button class="sign-up-btn">Sign Up</button>
+
+          <div class="why-us-container">
+            <div class="why-us-title">Why Us</div>
+            <div class="why-us-reasons">
+              Tutorials by industry experts<br>
+              Peer & expert code review<br>
+              Coding exercises<br>
+              Access to our GitHub repos<br>
+              Community forum<br>
+              Flashcard decks<br>
+              New videos every week
+            </div>
+          </div>
+
         </div>
-
-
 
       </div>
     </div>
+  
+  <!--
   </div>
+  -->
   
 </body>
 </html>
