desktop done - could be better

--- a/fem_challenges/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/fem_challenges/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -9,7 +9,8 @@
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
 <body>
- 
+  <div class="chrome-tools-layer">
+    <div class="page-container">
 
       <div class="content-container">
 
@@ -46,6 +47,9 @@
         </div>
 
       </div>
+      
+    </div>
+  </div>
   
 </body>
 </html>
